test/files/neg/t7494-before-parser.check
warning: Dropping phase beforeparser, it is not reachable from parser
sample_2.scala:8: error: type mismatch;
 found   : String("")
 required: Int
  def f: Int = ""
               ^
1 error
